objects/Visit_Report_Additional_Segmentation__c.object
<CustomObject>
    <description>R6 - Join Object between Visit report and Account Segmentation.</description>
    <fields>
        <fullName>Account_Segmentation__c</fullName>
        <description>R6 - Master-detail relationship with Account Segmentation.Created as part of Req# 3344</description>
        <label>Account Segmentation</label>
        <referenceTo>Customer_Segmentation__c</referenceTo>
        <relationshipName>Visit_Report_Additional_Segmentations</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Segmentation_Level__c</fullName>
        <description>created for RKD. Segmentation for Visit Report Dashboard.</description>
        <formula>Text(Account_Segmentation__r.Customer_Sales_Segmentation__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Segmentation Level</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Segmentation_Qualification__c</fullName>
        <formula>TEXT( Account_Segmentation__r.Segment_Level__c )</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Segmentation Qualification</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>User_Name_of_Team_Members__c</fullName>
        <description>R6</description>
        <label>User Name of Team Members</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Visit_Report__c</fullName>
        <description>R6 - Master-detail relationship with Visit report. Created as part of Req# 3344</description>
        <label>Visit Report</label>
        <referenceTo>Visit_Report__c</referenceTo>
        <relationshipName>Visit_Report_Additional_Segmentations</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>of_Related_Segmentations__c</fullName>
        <description>SFDC - 4167 - Field type ‘Power of One’ for reporting purpose only</description>
        <formula>1</formula>
        <inlineHelpText>It shows if at least 1 record on this object was created or not (1 means that it was)</inlineHelpText>
        <label># of Related Segmentations</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Related Segmentation</label>
    <nameField>
        <label>Related Segmentation Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Related Segmentations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>